fix: implement text overflow ellipsis for quick pick items

--- a/static/css/parts/QuickPick.css
+++ b/static/css/parts/QuickPick.css
@@ -59,24 +59,17 @@
 
 .QuickPickItem {
   display: flex;
-  /* column-gap: 1rem; */
-  /* padding: 0 6px 0 11px; */
   white-space: nowrap;
-  /* height: 23px; */
-  /* contain: strict; */
   align-items: center;
-
   width: 100%;
   height: 22px;
   font-size: 13px;
-  contain: strict;
   margin: 0;
-  padding: 0;
-  /* position: absolute; */
   padding: 0 6px;
   contain: strict;
   gap: 4px;
 }
+
 
 .QuickPickItem:hover {
   background: var(--ListHoverBackground);
@@ -88,10 +81,6 @@
   background: var(--ListActiveSelectionBackground);
 }
 
-.QuickPickItemLabel {
-  /* pointer-events: none; */
-  font-size: 13px;
-}
 
 .QuickPickItemDescription {
   font-size: 0.8rem;
@@ -145,6 +134,7 @@
   background-repeat: no-repeat;
   width: 16px;
   height: 22px;
+  flex-shrink: 0;
 }
 
 /* TODO remove icon from dom when it is not needed */
