--- a/static/css/parts/ViewletExplorer.css
+++ b/static/css/parts/ViewletExplorer.css
@@ -19,7 +19,7 @@
   display: flex;
 }
 
-.TreeItemLabel {
+.Label {
   text-overflow: ellipsis;
   overflow: hidden;
   display: inline-block;
